Changed margins on hover to stop text changing layout while getting bigger, changed border of page-section h2 to be low on smaller screen size, added queries.css for media queries, added image to coming soon

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,6 @@ nav a {
   padding: 0 10px;
   margin: 15px 0.8vw;
   font-size: 2vw;
-  transition: all 0.1s ease-in;
 }
 
 nav a:hover {
@@ -143,7 +142,7 @@ nav a:last-child {
   padding-right: 15px;
   margin-right: 20px;
   border-right:5px solid var(--colour1);
-  text-align: end;
+  text-align: start;
   flex: 0 0 15%;
   flex-flow: row wrap;
   min-width: 130px;
@@ -156,18 +155,20 @@ nav a:last-child {
 
 .page-section div,
 .page-section section {
-  flex: 0 0 80%;
+  flex: 0 0 75%;
 }
 
 .grid-container {
   display: grid;
   align-content: center;
   justify-content: center;
-  grid-template-columns: 40% 40%;
+  max-width: 70%;
+  margin: 0 auto;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 50% 35%;
   grid-template-areas: 
-    "firstSite firstSite"
-    "htmlRefactor somethingElse";
+    "firstSite firstSite firstSite"
+    "htmlRefactor htmlRefactor somethingElse";
 }
 
 .grid-item {
@@ -176,20 +177,22 @@ nav a:last-child {
   background-color: var(--colour1);
   text-decoration: none;
   font-size: 0.2vw;
-  border: 5px solid var(--colour2);
+  border-right: 5px solid var(--colour2);
+  border-bottom: 5px solid var(--colour2);
   margin: 0.5em;
-  min-height: 130px;
-  min-width: 150px;
+  min-height: 20vh;
 }
 
 .grid-item:hover {
-  border: 6px solid var(--colour3);
+  border-right: 6px solid var(--colour3);
+  border-bottom: 6px solid var(--colour3);
   background-color: var(--alphacolour);
 }
 
 .grid-item:hover a {  
   font-size: 15px;
   color: var(--colour3);
+  background-color: var(--colour1);
 }
 
 .grid-item a {
@@ -229,7 +232,21 @@ nav a:last-child {
   background-image: url(../images/html-refactor.png);
 }
 
-.somethingElse { grid-area: somethingElse; }
+.somethingElse { 
+  grid-area: somethingElse;
+  background: linear-gradient(
+    rgba(53, 29, 49, 0.5),
+    var(--colour1) 
+  ),
+  url(../images/reload-window-colour1.svg);
+  background-repeat: no-repeat;
+  background-size: fill;
+  background-position-x: center;
+}
+
+.somethingElse:hover {
+  background-image: url(../images/reload-window-colour3.svg);
+}
 
 address a {
   text-decoration: none;
@@ -245,25 +262,7 @@ address a {
 address a:hover {
   font-size: 2.1vw;
   color: var(--colour3);
+  margin: 0 7px;
   border-bottom: 3px solid var(--colour3);  
   border-right: 3px solid var(--colour3);
-}
-
-@media screen and (max-width:900px) {
-  h1 {
-    font-size: 25px;
-  }
-  nav a {
-    font-size: 18px;
-  }
-  nav a:hover {
-    font-size: 19px
-  }
-  address a {
-    font-size: 18px;
-    margin: 10px 5px;
-  }
-  address a:hover {
-    font-size: 19px
-  }
 }
